--- a/dhut/templates/db.html
+++ b/dhut/templates/db.html
@@ -5,16 +5,23 @@
   <div class="container">
 
 
-<h2>Page View Report</h2>
+<h2>Temperature and humidity report</h2>
 
-
-<ul>
-
-{% for greeting in greetings %}
-    <li>{{ greeting.when }}</li>
+<table>
+  <tr>
+    <th></th>
+    <th>Date and time</th>
+    <th>T [°C]</th>
+    <th>% RH</th>
+  </tr>
+  <tr>
+{% for measurement in measurements %}
+    <td>{{ measurement.when }}</td>
+    <td>{{ measurement.temp }}</td>
+    <td>{{ measurement.rh   }}</td>
 {% endfor %}
 
-</ul>
+</table>
 
 </div>
 
