--- a/dhut/templates/line_chart.html
+++ b/dhut/templates/line_chart.html
@@ -28,8 +28,8 @@
     };
 
     window.onload = function() {
-      var ctx = document.getElementById('pie-chart').getContext('2d');
-      window.myPie = new Chart(ctx, config);
+      var ctx = document.getElementById('Scatterplot').getContext('2d');
+      window.myScatter = new Chart(ctx, config);
     };
 
   </script>
