Add lines, remove points

--- a/dhut/templates/line_chart.html
+++ b/dhut/templates/line_chart.html
@@ -23,7 +23,9 @@
         }],
       },
       options: {
-        responsive: true
+	responsive: true,
+	showLine: true,
+	pointRadius: 0
       }
     };
 
