--- a/dhut/templates/line_chart.html
+++ b/dhut/templates/line_chart.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div id="container" style="width: 75%;">
+  <div id="container" style="width: 75%; margin: 0 auto;">
     <canvas id="Scatterplot"></canvas>
   </div>
 
