--- a/dhut/templates/line_chart.html
+++ b/dhut/templates/line_chart.html
@@ -70,6 +70,7 @@
     };
 
     window.onload = function() {
+      Chart.defaults.font.size = 16;
       var ctx = document.getElementById('Scatterplot').getContext('2d');
       window.myScatter = new Chart(ctx, config);
     };
