Add index page and menu
Use index.html to present graph and last 20 measurements.
Add menu at top of page, linking to home (index), measurement list, and
graph.

--- a/dhut/templates/base.html
+++ b/dhut/templates/base.html
@@ -47,6 +47,21 @@
   </style>
 </head>
 <body>
+<nav class="navbar navbar-default navbar-static-top navbar-inverse">
+  <div class="container">
+    <ul class="nav navbar-nav">
+      <li class="active">
+        <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
+      </li>
+      <li>
+        <a href="/db"><span class="glyphicon glyphicon-list-alt"></span> measurement list</a>
+      </li>
+      <li>
+        <a href="/line_chart"><span class="glyphicon glyphicon-stats"></span> Graph</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 {% block content %}{% endblock %}
 
