--- a/dhut/templates/index.html
+++ b/dhut/templates/index.html
@@ -1,58 +1,106 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load static %}
+{% load tz %}
 
 {% block content %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.0/chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/luxon@^2"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@^1"></script>
 
-<div class="jumbotron text-center">
-  <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="{% static 'lang-logo.png'%}">
-    </a>
-    <h1>Getting Started with Python on Heroku</h1>
-    <p>This is a sample Python application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-python"><span class="glyphicon glyphicon-flash"></span> Getting Started with Python</a>
-    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/python-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
-  </div>
+<div id="container" style="width: 75%; margin: 0 auto;">
+  <canvas id="Scatterplot"></canvas>
 </div>
+
 <div class="container">
-  <div class="alert alert-info text-center" role="alert">
-    To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-python" class="alert-link">Getting Started with Python on Heroku</a> tutorial.
-  </div>
-  <hr>
-  <div class="row">
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
-      <ul>
-        <li>This app was deployed to Heroku, either using Git or by using <a href="https://github.com/heroku/python-getting-started">Heroku Button</a> on the repository.</li>
 
-        <li>When Heroku received the source code, it fetched all the dependencies in <a href="https://github.com/heroku/python-getting-started/blob/main/requirements.txt">requirements.txt</a>, creating a deployable slug.</li>
-        <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
-        <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Next Steps</h3>
-      <ul>
-        <li>If you are following the <a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started</a> guide, then please head back to the tutorial and follow the next steps!</li>
-        <li>If you deployed this app by deploying the Heroku Button, then in a command line shell, run:</li>
-        <ul>
-          <li><code>git clone https://github.com/heroku/python-getting-started.git</code> - this will create a local copy of the source code for the app</li>
-          <li><code>cd python-getting-started</code> - change directory into the local source code repository</li>
-          <li><code>heroku git:remote -a &lt;your-app-name></code> - associate the Heroku app with the repository</li>
-          <li>You'll now be set up to run the app locally, or <a href="https://devcenter.heroku.com/articles/getting-started-with-python#push-local-changes">deploy changes</a> to Heroku</li>
-        </ul>
-      </ul>
-      <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
-      <ul>
-        <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-python">Getting Started with Python on Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/django-app-configuration">Configuring Django Apps for Heroku</a></li>
-      </ul>
-    </div>
-  </div> <!-- row -->
-   <div class="alert alert-info text-center" role="alert">
-    Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
-  </div>
+  <h2>Temperature and humidity report</h2>
+
+  <table class="table">
+    <tr>
+      <th>Date and time</th>
+      <th>T [°C]</th>
+      <th>% RH</th>
+    </tr>
+  {% for measurement in measurements %}
+    <tr>
+      {% timezone "Europe/Berlin" %}
+      <td>{{ measurement.when|date:"Y-m-d " }} {{ measurement.when|time:"H:i:s T" }}</td>
+      {% endtimezone %}
+      <td>{{ measurement.temp }}</td>
+      <td>{{ measurement.rh   }}</td>
+    </tr>
+  {% endfor %}
+
+  </table>
+
 </div>
+
+  <script>
+    var config = {
+      type: 'scatter',
+      data: {
+        datasets: [{
+          label:   'Temperature',
+          yAxisID: 'Temperature',
+	  xAxisID: 'Time',
+	  pointStyle: 'line',
+          borderColor: 'rgb(255, 128, 128)',
+          data: {{ temps|safe }}
+        }, {
+          label:   'Humidity',
+          yAxisID: 'Humidity',
+	  xAxisID: 'Time',
+	  pointStyle: 'line',
+          borderColor: 'rgb(128, 255, 128)',
+          data: {{ rhs|safe }}
+        }],
+      },
+      options: {
+	plugins: {
+		legend: {
+			display: true,
+			labels: { usePointStyle: true }
+		},
+	},
+	scales: {
+	      'Humidity': {
+		type: 'linear',
+		position: 'left',
+		min: 30,
+		max: 70,
+		ticks: { stepSize: 4 },
+		title: { display: true, text: "Relative humidity [%]" }
+	      },
+	      'Temperature': {
+		type: 'linear',
+		position: 'right',
+		min: 10,
+		max: 30,
+		ticks: { stepSize: 2 },
+		title: { display: true, text: "Temperature [°C]" }
+	      },
+	      'Time': {
+		type: 'time',
+		position: 'bottom',
+		time: {
+			unit:'hour',
+			stepSize:0.5,
+			displayFormats: {'hour': 'HH:mm'}
+		},
+	      }
+	},
+	responsive: true,
+	showLine: true,
+	pointRadius: 0
+      }
+    };
+
+    window.onload = function() {
+      Chart.defaults.font.size = 16;
+      var ctx = document.getElementById('Scatterplot').getContext('2d');
+      window.myScatter = new Chart(ctx, config);
+    };
+
+  </script>
+
 {% endblock %}
