--- a/dhut/templates/base.html
+++ b/dhut/templates/base.html
@@ -57,7 +57,13 @@
         <a href="/db"><span class="glyphicon glyphicon-list-alt"></span> measurement list</a>
       </li>
       <li>
+        <a href="/db1"><span class="glyphicon glyphicon-list-alt"></span> measurement list 1</a>
+      </li>
+      <li>
         <a href="/line_chart"><span class="glyphicon glyphicon-stats"></span> Graph</a>
+      </li>
+      <li>
+        <a href="/line_chart1"><span class="glyphicon glyphicon-stats"></span> Graph 1</a>
       </li>
     </ul>
   </div>
