--- a/dhut/templates/base.html
+++ b/dhut/templates/base.html
@@ -60,10 +60,22 @@
         <a href="/db1"><span class="glyphicon glyphicon-list-alt"></span> measurement list 1</a>
       </li>
       <li>
+        <a href="/db2"><span class="glyphicon glyphicon-list-alt"></span> measurement list 1</a>
+      </li>
+      <li>
+        <a href="/db3"><span class="glyphicon glyphicon-list-alt"></span> measurement list 1</a>
+      </li>
+      <li>
         <a href="/line_chart"><span class="glyphicon glyphicon-stats"></span> Graph</a>
       </li>
       <li>
         <a href="/line_chart1"><span class="glyphicon glyphicon-stats"></span> Graph 1</a>
+      </li>
+      <li>
+        <a href="/line_chart2"><span class="glyphicon glyphicon-stats"></span> Graph 1</a>
+      </li>
+      <li>
+        <a href="/line_chart3"><span class="glyphicon glyphicon-stats"></span> Graph 1</a>
       </li>
     </ul>
   </div>
